overlays/dev/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-demo-app
spec:
  replicas: 1
